methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:2: error: method isFacingTrail overrides nothing
override def isFacingTrail():Boolean = {
             ^