methods.slug.SlugTracking.scala.code
override def isFacingTrail():Boolean = {
  if (!estFaceMur)
  {
  	avance()
		var coul = getCouleurSol
  	recule()
  	return coul == Color.green
  }
  else
  	return false
}

while(!estSurBiscuit)
{
	if (isFacingTrail())
		avance()
	else
		gauche
}